src/app/pages/fandom/fandom-page.component.scss
@import 'src/styles.scss';

.page-container {
	font-size: $base-font-size;
	font-family: $base-font-family;
	padding: $main-padding;

	@media screen and (max-width: 768px) {
		padding: 0;
	}

	.page-content-container {
		width: 100%;
		// height: 100vh;
		padding: 18px 20px 20px 20px;
		// background-color: white;

		.top-section-container {
			// max-height: 300px;
			// display: flex;
			margin-bottom: 24px;
			background-color: white;
			border-radius: 12px;
			box-shadow: $common-box-shadow-2;

			.fandom-image {
				// max-width: 40%;
				// max-height: 300px;
				// border-radius: 3px;
				height: 240px;
				width: 100%;
				background-repeat: repeat-x;
				border-radius: 12px 12px 0 0;
			}

			.info-area-container {
				min-width: 60%;
				padding: 8px 20px 16px;

				.info-area-headers {
					text-align: left;
					display: flex;

					.main-header {
						width: 100%;
						text-align: left;
						font-size: $page-header-font-size;
						display: flex;
						align-items: center;
						justify-content: space-between;

						.buttons-container {
							float: right;
							display: flex;
							font-size: $base-font-size;

							.admin-button, .follow-button, .unfollow-button,
							.edit-button, .delete-button {
								// @extend %ext-common-button;
								// height: 24px;
								// color: grey;
								padding: 4px 8px;
								margin-left: 5px;

								&:hover {
									color: $third-color;
								}
							}

							.edit-button, .delete-button {
								margin-top: 2px;
							}
						}
					}
				}

				.admin {
					color: $primary-color;

					&:hover {
						color: grey;
					}
				}

				.description {
					margin-top: 8px;
					overflow: auto;
				}
			}
		}

		.posts-section-container {
			width: 100%;

			.posts-section-headers {
				margin-bottom: 10px;

				.header-container {
					text-align: left;
					font-size: $base-font-size + 1px;

					.buttons-container {
						display: flex;
						justify-content: flex-end;
						align-items: center;

						.create-post-button {
							padding: 7px 14px;
							// @extend %ext-common-button;
							// background-color: $secondary-color;
							// border-color: $secondary-color;
							// height: 24px;

							// @media screen and (max-width: 425px) {
							// 	height: 22px;
							// }

							// &:hover {
							// 	color: grey;
							// }
						}

						.sort-dropdown-container {
							margin-left: 12px;

							.btn {
								font-size: $base-font-size;
								box-shadow: $box-shadow;

								&.btn-outline-primary {
									color: $textbox-background-color;
									border-color: #c9cccd;
									background-color: white;

									&:hover {
										color: white;
										background-color: $third-color;
										border-color: $third-color;
									}

									&:focus {
										color: white;
										background-color: $third-color;
										border-color: $third-color;
										box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
									}

									&:not(:disabled):not(.disabled):active {
										color: white;
										background-color: $third-color;
										border-color: $third-color;
									}

									&::after {
										display: none;
									}
								}

								i.fas {
									margin-left: 8px;
									font-size: 0.8em;
								}
							}

							.dropdown-menu {
								box-shadow: $box-shadow;
								border: 1px solid #c9cccd;
								border-radius: 3px;

								.dropdown-item {
									font-size: $base-font-size;

									&:hover {
										background-color: $page-background-color;
										color: $textbox-background-color;
									}

									&:active {
										background-color: $third-color;
										color: white;
									}
								}
							}
						}

						.sort-dropdown-button-container {
							@media screen and (max-width: 425px) {
								margin-top: -1px;
							}

							.sort-dropdown-button {
								@extend %ext-common-button;
								color: grey;
								margin-left: 10px;
								height: 23.5px;

								@media screen and (max-width: 425px) {
									height: 21.5px;
								}

								&:hover {
									color: $third-color;
								}

								@media screen and (max-width: 425px) {
									margin-left: 6px;
								}
							}

							.sort-dropdown-items-container {
								font-size: $base-font-size - 1px;
								padding: 5px 10px 8px 10px;
								min-width: 140px;

								.recent-filter-container, .pop-filter-container {
									display: flex;

									div:last-child > input {
										margin: 4px 0 0 5px;
									}
								}

								.apply-button {
									@extend %ext-common-button;
									background-color: $third-color;
									border: none;
									margin-top: 8px;
									padding: 2px 5px;

									&:hover {
										color: $third-color;
									}
								}
							}
						}
					}
				}
			}

			.sections-separator {
				margin-top: 0px;
			}

			.post-box {
				width: 97%;
				background: white;
				padding: 15px 0px 15px 15px;
				margin: 0 0 18px 0;
				box-shadow: .5px .5px 3px #c9cccd;
				border-radius: 3px;

				@media screen and (max-width: 768px) {
					width: 100%;
					margin: 0 0 14px 0;
				}

				&-left-column {
					width: 8%;
					text-align: center;

					.user-img {
						width: 50px;
						height: 50px;
						border-radius: 50%;

						@media screen and (max-width: 425px) {
							width: 38px;
							height: 38px;
						}

						&:hover {
							border: 1px solid $third-color;
						}
					}

					&-separator {
						width: 50px;
						margin: 10px auto 5px auto;

						@media screen and (max-width: 425px) {
							width: 38px;
							margin-bottom: 3px;
						}
					}
				}

				&-main-column {
					width: 80%;
					margin-left: 20px;
					padding: 0 10px 0 10px;

					@media screen and (max-width: 425px) {
						width: 77%;
					}

					&-header {
						margin: -10px 0 5px 0;
						color: #a6acaf;
						text-align: left;

						&-fandom-link {
							margin:0 20px 0 0;

							&:hover {
								color: #f8c471;
							}
						}

						&-right-section {
							float: right;
							text-align: left;

							.delete-post-button:hover {
								color: $third-color;
							}
						}
					}

					.num-comments-button {
						margin-top: 5px;
						border-radius: 2px;
						border: none;
						background: $page-background-color;

						&:hover {
							color: $third-color;
						}
					}

					&-content-img {
						max-width: 150px;
						max-height: 300px;
					}
				}

				.reply-button {
					margin: 5px 0 0 8px;
					border-radius: 2px;
					border: none;
					color: white;
					background: $third-color;

					&:hover {
						color: grey;
					}
				}

				.reply-section-container {
					margin-top: 25px;

					.reply-box {
						padding: 0 0 0 5px;
						width: 300px;
						min-height: 60px;
						border-radius: 2px;
					}

					.send-button-container {
						width: 300px;
						text-align: right;

						.send-button {
							@extend %ext-common-button;
							background: $third-color;
							border-color: $third-color;
							padding: 1px 8px;

							&:hover{
								color: grey;
							}
						}
					}
				}

				&-separator {
					margin: -5px 0;
					width: .93px;
					background: $page-background-color;
				}

				&-right-column {
					margin: auto;

					.arrow-up {
						width: 0;
						height: 0;
						border-left: 10px solid transparent;
						border-right: 10px solid transparent;
						border-bottom: 10px solid #d7dbdd;

						&:hover {
							border-bottom: 10px solid #909497;
						}
					}

					.arrow-down {
						width: 0;
						height: 0;
						border-left: 10px solid transparent;
						border-right: 10px solid transparent;
						border-top: 10px solid #d7dbdd;
						margin-top: -65%;

						&:hover {
							border-top: 10px solid #909497;
						}
					}
				}
			}
		}
	}
}

